# firefly-shell

./: Cargo.toml  README.md
.cargo/: config.toml
src/: font.rs  main.rs  taskbar.rs
src/app/: desktop.rs  discovery.rs  launcher.rs  mod.rs
src/render/: font.rs  mod.rs
src/theme/: colors.rs  glass.rs  metrics.rs  mod.rs
src/ui/: mod.rs  taskbar.rs  wallpaper.rs
src/ui/panels/: mod.rs  quick_settings.rs  start_menu.rs  widget_panel.rs
