[package]
name = "shell"
version = "0.1.0"
edition = "2021"
description = "Firefly Shell - Terminal gráfico do RedstoneOS"

[[bin]]
name = "shell"
path = "src/main.rs"
test = false
bench = false

[dependencies]
redpowder = { path = "../../redpowder" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
codegen-units = 1
debug = 2
strip = "none"
debug-assertions = true
overflow-checks = true
incremental = false
